@@ -34,6 +34,8 @@ xine-lib (1.1.9) (unreleased)
     possible to use the DJB accelerated FFT when using the external a52dec
     liba52 library.
   * Fixed an input_pvr issue with 'set input' for ivtv versions 0.10.6+
+  * demux_aiff: only check for chunk's size being lesser than 100 when
+    reading the COMM_TAG. [Bug #6]
 
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
